syntax = "proto3";

option go_package = "./;product_service";

service ProductGrpcService {
  rpc GetAllProducts (GetAllProductsRequest) returns (GetAllProductsResponse) {}
}

message GetAllProductsRequest {
}

message GetAllProductsResponse {
  repeated ProductModel products = 1;
}

message ProductModel {
  int32 id = 1;
  string name = 2;
  string description = 3;
  string price = 4;
  int32 stockQuantity = 5;
}